# projet-s3

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  Makefile  file.csv  file_sm.csv  pollGraph.py
docs/html/: alternatif_8c.html  alternatif_8h.html  alternatif_8h_source.html  annotated.html  circuit_8h.html  circuit_8h_source.html  classes.html  condorcet_8c.html  condorcet_8h.html  condorcet_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  elementliste_8c.html  elementliste_8h.html  elementliste_8h_source.html  files.html  functions.html  functions_vars.html  global_8h.html  global_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  liste_8c.html  liste_8h.html  liste_8h_source.html  main_8c.html  menudata.js  struct_arc.html  structidem.html  structliste.html  structpour.html  structs__arc__p.html  structs__mat__char__dyn.html  structs__mat__dyn.html  structs__tab__dyn.html  uninomiales_8c.html  (+5 more)
docs/latex/: alternatif_8c.tex  alternatif_8h.tex  annotated.tex  circuit_8h.tex  condorcet_8c.tex  condorcet_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  elementliste_8c.tex  elementliste_8h.tex  files.tex  global_8h.tex  liste_8c.tex  liste_8h.tex  main_8c.tex  refman.tex  struct_arc.tex  structidem.tex  structliste.tex  structpour.tex  structs__arc__p.tex  (+7 more)
src/: alternatif.c  alternatif.h  circuit.c  circuit.h  condorcet.c  condorcet.h  elementliste.c  elementliste.h  global.h  liste.c  liste.h  main.c  uninomiales.c  uninomiales.h  utils_sd.c  utils_sd.h
(+53 files in other folders)
